--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "build": "npm run build-js && npm run build-css && npm run dist-css && npm run dist-js",
         "test": "echo 'There are no tests at this time'",
         "deploy": "npm run build && npm run test",
-        "localpack": "npm run deploy && npm pack --pack-destination ~/Repos/"
+        "devpack": "sh ./devpack.sh"
     },
     "dependencies": {
         "react": "^18.2.0",
