--- a/package.json
+++ b/package.json
@@ -10,38 +10,26 @@
     "type": "module",
     "types": "dist/jsx/GTable.d.ts",
     "scripts": {
-        "prebuild": "rm -rf build && rm -rf dist",
-        "build-js": "rollup -c --silent",
-        "dist-js": "cp -rf ./src/types ./dist/types",
-        "build-css": "node-sass -q ./src/style.scss ./build/style.css --output-style expanded",
-        "dist-css": "node-sass -q ./src/style.scss ./dist/style.css --output-style compressed",
-        "build": "npm run build-js && npm run build-css && npm run dist-css && npm run dist-js",
+        "types": "cp -rf ./src/types ./dist/types",
+        "prebuild": "npx gulp clean",
+        "build": "npx gulp build && npm run types",
         "test": "echo 'There are no tests at this time'",
         "deploy": "npm run build && npm run test",
         "devpack": "sh ./bin/devpack.sh",
-        "release": "echo TODO add gulp file or similar to increment version and add tag and push"
+        "release": "npx gulp release"
     },
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
+    "localDependencies": {
+        "s8s-build": "file:~/Repos/s8s-build-0.1.0.tgz"
+    },
     "devDependencies": {
-        "@babel/cli": "^7.21.0",
-        "@babel/core": "^7.21.0",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-react": "^7.18.6",
-        "@rollup/plugin-babel": "^6.0.3",
-        "@rollup/plugin-commonjs": "^24.0.1",
-        "@rollup/plugin-node-resolve": "^15.0.1",
-        "@rollup/plugin-terser": "^0.4.0",
-        "@rollup/plugin-typescript": "^11.0.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "s8s-build": "^0.1.0",
         "browser-sync": "^2.28.3",
-        "node-sass": "^8.0.0",
-        "reload": "^3.2.1",
-        "rollup": "^3.18.0",
-        "tape": "^5.6.3",
         "tslib": "^2.5.0",
         "typescript": "^4.9.5"
     },
