--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
         "react-dom": "^18.2.0"
     },
     "localDependencies": {
-        "s8s-build": "file:~/Repos/s8s-build-0.1.0.tgz"
+        "s8s-build": "^0.1.2",
+        "s8s-build-": "file:~/Repos/s8s-build-0.1.2.tgz"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
-        "s8s-build": "^0.1.0",
-        "browser-sync": "^2.28.3",
+        "s8s-build": "^0.1.2",
         "tslib": "^2.5.0",
         "typescript": "^4.9.5"
     },
